changed connection to db , added .env.docker